--- a/.github/workflows/NewInstance.yml
+++ b/.github/workflows/NewInstance.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   CONTAINER_NAME: $GITHUB_SHA
-  RESOURCE_GROUP: $GITHUB_RUN_ID
+  RESOURCE_GROUP: Grupito.$GITHUB_RUN_ID
   IMAGE_PULL_SECRET_NAME: "your-image-pull-secret-name"
 
 jobs:
