--- a/.github/workflows/NewInstance.yml
+++ b/.github/workflows/NewInstance.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   CONTAINER_NAME: $GITHUB_SHA
-  RESOURCE_GROUP: Grupito.$GITHUB_RUN_ID
+  RESOURCE_GROUP: Grupito
   IMAGE_PULL_SECRET_NAME: "your-image-pull-secret-name"
 
 jobs:
@@ -31,11 +31,11 @@ jobs:
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     # Creo Un nuevo resource group
-    - name: Greferfrferf
+    - name: CrearGrupoRecursos
       run: az group create --location westus --name $RESOURCE_GROUP --tags Organización=SENA Lenguaje=HTML Plataforma=Docker
 
     # Intento Crear la instracia de Docker
-    - name: Get ACR credentials
+    - name: CrearContainer
       run: az container create --resource-group $RESOURCE_GROUP --cpu 1 --memory 1.5 --os-type Linux --ip-address public --ports {80,8080} --protocol tcp --protocol udp --dns-name-label miconyainerp --location westus --name $CONTAINER_NAME --image johnmayorga18/miprimerrepo:9551dd1624e213dfc31c435640188f06f7c9aa20 --restart-policy OnFailure 
       id: get-acr-creds
 
