--- a/.github/workflows/NewInstance.yml
+++ b/.github/workflows/NewInstance.yml
@@ -6,7 +6,7 @@ on:
     types: [completed]
 
 env:
-  CONTAINER_NAME: PrimerContenedor
+  CONTAINER_NAME: containerdejohn
   RESOURCE_GROUP: Grupito
   IMAGE_PULL_SECRET_NAME: "your-image-pull-secret-name"
 
