--- a/.github/workflows/DockerImage.yml
+++ b/.github/workflows/DockerImage.yml
@@ -17,6 +17,10 @@ jobs:
     
     - uses: actions/checkout@v3
     
+    #Inicializando
+    - name: Loading
+      run: cat sucess.txt
+    
     #Inicio sesión en la web page docker
     - name: Login DockerHub WebService
       run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
