--- a/.github/workflows/DockerImage.yml
+++ b/.github/workflows/DockerImage.yml
@@ -26,8 +26,8 @@ jobs:
       run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
       
     #Elimino la ultima versión del docker Hub
-    # - name: Deleting last image
-    #  run:  docker image rm docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:$TagD
+    - name: Deleting last image
+      run:  docker image rm docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:$TagD
     
     #Construyo la imagen docker apartir de los archivos GitHub 
     - name: Build Docker Image
